add exception handler advices and modify exception handling for jwt filters